[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/data_spawner.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/DataSpawner.gd" type="Script" id=2]
[ext_resource path="res://src/Objects/Data.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="DataSpawner" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
data_entity = ExtResource( 3 )
offset_range = 30.0

[node name="DataSpawner" type="Sprite" parent="."]
position = Vector2( 0, -40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 45, -40 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
